--- a/package.json
+++ b/package.json
@@ -6,15 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./* --ignore-path .gitignore --ext .ts,.tsx",
-    "format": "prettier --write . --ignore-path .gitignore",
-    "release": "changeset version"
+    "format": "prettier --write . --ignore-path .gitignore"
   },
   "keywords": [],
   "author": "juicestack",
   "license": "MIT",
   "devDependencies": {
-    "@changesets/changelog-github": "0.4.8",
-    "@changesets/cli": "2.26.2",
     "@total-typescript/ts-reset": "0.4.2",
     "@typescript-eslint/eslint-plugin": "5.59.7",
     "@typescript-eslint/parser": "5.59.7",
@@ -29,7 +26,6 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "packageManager": "pnpm@8.5.0",
   "dependencies": {
     "supabase": "1.75.3"
   }
